# ESP32-Project

./: .gitignore
00_Learn/: CMakeLists.txt  sdkconfig
10_WIFI/main/: main.c
Mic/: CMakeLists.txt  sdkconfig.bak.20260528_163724  sdkconfig.defaults  sdkconfig.defaults.bak.20260528_163724
Mic-getaway/: .gitignore  CMakeLists.txt  sdkconfig.defaults
Mic-getaway/components/BSP/: CMakeLists.txt
Mic-getaway/components/BSP/IIS/: iis.c  iis.h
Mic-getaway/components/Middlewares/: CMakeLists.txt
Mic-getaway/components/Middlewares/llm/: llm_client.c  llm_client.h  llm_config.h  llm_gateway_http.c  llm_gateway_http.h  llm_gateway_protocol.c  llm_gateway_protocol.h  llm_gateway_tts_ws.c  llm_gateway_tts_ws.h  llm_gateway_ws.c  llm_gateway_ws.h  llm_router.c  llm_router.h  llm_wav.c  llm_wav.h  volc_gateway_auth.c  volc_gateway_auth.h  volc_gateway_config.h
Mic-getaway/components/Middlewares/mic/: mic_adc_test.c  mic_adc_test.h  mic_llm_bridge.c  mic_llm_bridge.h
Mic-getaway/components/Middlewares/screen/: ai_screen_bridge.c
Mic-getaway/components/Middlewares/sensors/: bme690_llm_bridge.c  bme690_llm_bridge.h  csi_llm_bridge.c  csi_llm_bridge.h
Mic-getaway/components/Middlewares/speaker/: speaker_llm_bridge.c  speaker_llm_bridge.h  speaker_player.c  speaker_player.h  speaker_resample.c  speaker_resample.h
Mic-getaway/components/Middlewares/system/: system_llm_bridge.c  system_llm_bridge.h
Mic-getaway/components/Middlewares/wifi/: wifi_manager.c
Mic-getaway/components/app_config/: app_debug_config.h  app_main_config.h
Mic-getaway/main/: CMakeLists.txt  idf_component.yml  main.c
Mic/components/Middlewares/: CMakeLists.txt
Mic/components/Middlewares/llm/: http_client.c  http_client.h  llm_client.c  llm_client.h  llm_config.h  mic_llm_doubao.c  mic_llm_doubao.h
Mic/components/Middlewares/mic/: mic_adc_test.c  mic_adc_test.h  mic_asr_doubao.c  mic_asr_doubao.h  mic_asr_doubao_parser.c  mic_asr_doubao_parser.h  mic_asr_llm_bridge.c  mic_asr_llm_bridge.h  mic_network_diag.c  mic_network_diag.h  mic_vad.c  mic_vad.h
Mic/components/Middlewares/wifi/: wifi_manager.c  wifi_manager.h
Mic/components/app_config/: app_debug_config.h
Mic/components/manual_ws/: CMakeLists.txt  manual_ws.c  manual_ws.h
Mic/main/: main.c
Mic/tools/mic_adc_web/: index.html  serve.py
WIFI CSI/components/Middlewares/: CMakeLists.txt
WIFI CSI/components/Middlewares/csi/: csi_feature.h  csi_gain_compensation.h  csi_monitor.c  csi_monitor.h  (+4 more)
WIFI CSI/tools/: csi_web_plot.py  plot_csi_serial.py
WIFI CSI2/: sdkconfig
WIFI CSI2 - codex/: CMakeLists.txt  sdkconfig
WIFI CSI2 - codex/components/Middlewares/: CMakeLists.txt
WIFI CSI2 - codex/components/Middlewares/csi/: csi_espectre_like.c  csi_espectre_like.h  csi_feature.h  csi_monitor.c  csi_monitor.h  csi_print_config.h  csi_processor.c  csi_processor.h  csi_serial_output.c  csi_state.h  csi_subband_analysis.c  csi_subband_analysis.h
WIFI CSI2 - codex/components/Middlewares/wifi/: wifi_credentials.h  wifi_manager.c  wifi_manager.h
WIFI CSI2 - codex/main/: idf_component.yml  main.c
WIFI CSI2 - codex/tools/: csi_web_plot.py  plot_csi_serial.py  start_csi_plot.bat  start_csi_plot.command
WIFI CSI2/main/: CMakeLists.txt  idf_component.yml  main.c
WIFI CSI2/tools/: csi_web_plot.py
bme111111/: CMakeLists.txt  sdkconfig
bme111111/components/BSP/: CMakeLists.txt
bme111111/components/Middlewares/: CMakeLists.txt
bme111111/main/: CMakeLists.txt  idf_component.yml  main.c
try_bme690/: sdkconfig
try_bme690/components/BSP/: CMakeLists.txt
try_bme690/components/BSP/I2C/: iic.c  iic.h
try_bme690/components/BSP/SPI/: spi.c  spi.h
try_bme690/components/Middlewares/: CMakeLists.txt
try_bme690/components/Middlewares/bme690/: bme.h  bme690.c  bme690.h
try_bme690/components/Middlewares/http_client/: http_client.c  http_client.h
try_bme690/components/Middlewares/lcd/: lcd.c  lcd.h
try_bme690/components/Middlewares/llm_client/: llm_client.c  llm_client.h
try_bme690/components/Middlewares/wifi/: wifi_manager.c  wifi_manager.h
try_bme690/main/: CMakeLists.txt  idf_component.yml  main.c
(+12 files in other folders)
